<resources>
    <string name="app_name">Popular Movies</string>

    <string name="title_popular_movies">Popular movies</string>
    <string name="title_top_rated_movies">Top rated movies</string>
    <string name="title_favorite_movies">Favorite movies</string>
    <string name="title_movie_details">Movie details</string>

    <string name="movie_detail_description">Movie\'s details</string>

    <string name="movie_info_no_available">Movie information no available</string>

    <string name="action_sort_by_popular">Sort by popular</string>
    <string name="action_sort_by_top_rated">Sort by top rated</string>
    <string name="action_show_favorites">Show favorites</string>

    <string name="no_internet_available">No internet connection available</string>
    <string name="no_internet_available_check_settings">No internet connection found. Check internet settings.</string>
    <string name="no_favorite_movies">No movies in your favorites</string>
    <string name="try_again">Try again</string>

    <string name="movie_release_date">(1996)</string>
    <string name="movie_title">Title</string>
    <string name="movie_rating">9.1/10</string>
    <string name="movie_synopsis">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="mark_movie_favorite">Mark as &#10;favorite</string>
    <string name="movie_added_favorites">Added to &#10;favorites</string>
    <string name="share_movie">Share</string>

    <string name="trailers_title">Trailers</string>
    <string name="reviews_title">Reviews</string>

    <string name="no_trailers">No trailers available</string>
    <string name="no_reviews">No reviews available</string>


    <string name="review_read_more">Read more</string>
    <string name="review_read_less">Read less</string>

    <string name="a11y_ic_play_trailer">Play trailer</string>

    <string name="no_video_playback">No video playback available</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="share_title">Share movie</string>
    <string name="share_movie_message">Check out this movie</string>

</resources>
