<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:paddingStart="@dimen/activity_horizontal_spacing"
    android:paddingEnd="@dimen/activity_horizontal_spacing"
    tools:context=".activities.MovieDetailActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.Guideline
            android:id="@+id/vertical_guideline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <ImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/movie_poster_spacing"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_detail_description"
            app:layout_constraintDimensionRatio="H,2:3"
            app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
            app:layout_constraintStart_toStartOf="@+id/tv_movie_synopsis"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_movie_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_release_date_start_spacing"
            android:layout_marginLeft="@dimen/movie_release_date_start_spacing"
            android:layout_marginTop="8dp"
            android:text="@string/movie_release_date"
            android:textAppearance="@android:style/TextAppearance.Holo.Medium.Inverse"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
            app:layout_constraintTop_toTopOf="@+id/iv_movie_poster" />

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/movie_title"
            android:textAppearance="@android:style/TextAppearance.Holo.Large.Inverse"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_movie_release_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_release_date" />

        <TextView
            android:id="@+id/tv_movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/movie_rating"
            android:textAppearance="@android:style/TextAppearance.Holo.Small.Inverse"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_movie_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_title" />

        <Button
            android:id="@+id/btn_favorite"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="120dp"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/border_outline"
            android:drawableStart="@drawable/ic_favorite_outline_24dp"
            android:drawableLeft="@drawable/ic_favorite_outline_24dp"
            android:drawablePadding="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/mark_movie_favorite"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_movie_rating"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_rating" />

        <TextView
            android:id="@+id/tv_movie_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/movie_synopsis_top_spacing"
            android:text="@string/movie_synopsis"
            android:textAppearance="@android:style/TextAppearance.Holo.Small.Inverse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster" />


        <TextView
            android:id="@+id/tv_trailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_detail_subtitle_label_start_spacing"
            android:layout_marginLeft="@dimen/movie_detail_subtitle_label_start_spacing"
            android:layout_marginTop="@dimen/movie_detail_subtitle_label_top_spacing"
            android:text="@string/trailers_title"
            android:textAppearance="@android:style/TextAppearance.Holo.Medium.Inverse"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_synopsis" />

        <TextView
            android:id="@+id/tv_no_trailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/no_trailers"
            android:textAppearance="@android:style/TextAppearance.Holo.Small.Inverse"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_trailers" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_movie_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_trailers" />

        <TextView
            android:id="@+id/tv_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_detail_subtitle_label_start_spacing"
            android:layout_marginLeft="@dimen/movie_detail_subtitle_label_start_spacing"
            android:layout_marginTop="@dimen/movie_detail_subtitle_label_top_spacing"
            android:text="@string/reviews_title"
            android:textAppearance="@android:style/TextAppearance.Holo.Medium.Inverse"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_movie_trailers" />

        <TextView
            android:id="@+id/tv_no_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/no_reviews"
            android:textAppearance="@android:style/TextAppearance.Holo.Small.Inverse"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_reviews" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_movie_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_reviews" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>